Semana8/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deploy
  namespace: mumnk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
        - name: api-rust
          image: joselorenzana272/api-rust:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
