Semana8/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  namespace: mumnk8s
spec:
  selector:
    app: api-rust
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
